Styled the frontend

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,20 @@
         <h1 class="header__title">Random Workout Generator</h1>
     </header>
 
-    <div>Welcome to my random workout generator. This website will make random barbell workouts for you from
-    templates. Just put in some desired search criteria and press go!</div>
+    <div>
+      <p>
+        Welcome to my random workout generator. This website will make random barbell workouts for you from
+        templates. Just put in some desired search criteria and press go!
+      </p>
+      <br>
+      <p>
+        As you may have noticed, this page is still in very early development. At the moment there is only
+        one available search criteria, which is difficulty. Also, the selection of workouts is a bit limited.
+        The workouts are currently all built from templates from the "sheiko" program, named after the russian
+        powerlifting trainer. So the workouts are difficult, focusing on the big lifts, and training primarily strength.
+        I hope to add some more variety to the workout database soon.
+      </p>
+  </div>
     <br>
 
     <div>
@@ -29,9 +41,11 @@
         </div>
     </div>
 
-    <div>
-    <button id="generate">Go!</button>
+    <div align="right">
+    <button id="generate" class="go-button">Go!</button>
     </div>
+
+    <br>
 
     <div id="tableArea"></div>
 </body>
