expanded database and added styling for mobile browsers (fixed)

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Random Workout Generator</title>
     <script type="module" src="App.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
     <div>
         <div class='child inline-block-child'>Select the desired difficulty:</div>
         <div class='child inline-block-child'>
-            <select id="selectDifficulty">
+            <select class="selector" id="selectDifficulty">
                 <option value="">Any</option>
                 <option value="light">Light</option>
                 <option value="medium">Medium</option>
