--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <script type="module" src="App.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="cache-control" content="no-cache"/>
 </head>
 <body>
 
