* Changed buildspec to discard src root folder * Trivial change to test pipeline

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Random Workout Generator: Test pipeline</title>
+    <title>Random Workout Generator</title>
     <script type="module" src="App.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__title">Random Workout Generator</h1>
+        <h1 class="header__title">Random Workout Generator: Test Pipeline</h1>
     </header>
 
     <div>
