--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__title">Random Workout Generator: New arbitrary change</h1>
+        <h1 class="header__title">Random Workout Generator</h1>
     </header>
 
     <div>
